[package]
name = "lc3tools-sys"
version = "1.0.6"
authors = ["Rahul Butani <r.r.butan.i+crates@gmail.com>"]
edition = "2018"

description = "Rust bindings for LC3Tools"
documentation = "https://docs.rs/lc3tools-sys"
homepage = "https://github.com/rrbutani/lc3tools-sys"
repository = "https://github.com/rrbutani/lc3tools-sys"

readme = "README.md"

keywords = ["bindings", "lc-3", "simulator", "lc3tools"]
categories = ["simulation", "external-ffi-bindings"]

license = "Apache-2.0"

exclude = [".github"]

build = "build.rs"
links = "lc3core"


[badges]
github-actions = { repository = "rrbutani/lc3tools-sys", workflow = "full" }

is-it-maintained-issue-resolution = { repository = "rrbutani/lc3tools-sys" }
is-it-maintained-open-issues = { repository = "rrbutani/lc3tools-sys" }
maintenance = { status = "actively-developed" }


[lib]


[dependencies]

[dev-dependencies]

[build-dependencies]
bindgen = { version = "0.54.0", optional = true }
cc = { version = "1.0", features = ["parallel"] }
pretty_assertions = "0.6"
serde_json = "1.0"


[profile.release]
opt-level = 3
lto = true


[features]
default = ["grader", "frontend"]
generate-fresh = ["bindgen", "grader", "frontend"]
grader = []
frontend = []


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docs"]
all-features = false
features = ["grader", "frontend"]
default-target = "x86_64-unknown-linux-gnu"
