[package]
name = "lc3tools-sys"
version = "1.0.6"
authors = ["Rahul Butani <r.r.butan.i+crates@gmail.com>"]
edition = "2018"

description = "Rust bindings for LC3Tools"
documentation = "https://docs.rs/lc3tools-sys"
homepage = "https://github.com/rrbutani/lc3tools-sys"
repository = "https://github.com/rrbutani/lc3tools-sys"

readme = "README.md"

keywords = ["bindings", "lc-3", "simulator", "lc3tools"]
categories = ["simulation", "external-ffi-bindings"]

license = "Apache-2.0"

exclude = [".github"]

build = "build.rs"
links = "lc3core"


[badges]
github-actions = { repository = "rrbutani/lc3tools-sys", workflow = "full" }

is-it-maintained-issue-resolution = { repository = "rrbutani/lc3tools-sys" }
is-it-maintained-open-issues = { repository = "rrbutani/lc3tools-sys" }
maintenance = { status = "actively-developed" }


[lib]


[dependencies]

[dev-dependencies]
lc3-isa = { version = "0.1.0", git = "https://github.com/ut-utp/core.git" }
pretty_assertions = "0.6"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pretty_assertions = "0.6"
serde_json = "1.0"

bindgen = { version = "0.54.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
syn = { version = "1.0", optional = true, default-features = false, features = ["clone-impls", "extra-traits", "full", "parsing", "printing", "visit", "visit-mut"] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1


[features]
default = ["grader", "frontend"]
grader = ["frontend"]
frontend = []

generate-fresh = ["bindgen", "proc-macro2", "quote", "syn", "grader", "frontend"]
lto = []

cpp-interface-example = [] # Only for the example.


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docs"]
all-features = false
features = ["grader", "frontend"]
default-target = "x86_64-unknown-linux-gnu"


[[example]]
name = "mul"
path = "examples/mul.rs"
